--- a/Src/Howframework.Domain/Howframework.Domain.csproj
+++ b/Src/Howframework.Domain/Howframework.Domain.csproj
@@ -40,7 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserManagement\User.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ContextHandler\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
