--- a/Src/Howframework.Web/Howframework.Web/packages.config
+++ b/Src/Howframework.Web/Howframework.Web/packages.config
@@ -2,8 +2,10 @@
 <packages>
   <package id="AspNetMvc" version="4.0.10906.0" />
   <package id="AspNetWebPagesCore" version="2.0.10906.0" />
+  <package id="Autofac" version="2.6.1.841" />
+  <package id="Autofac.Mvc3" version="2.6.1.841" />
   <package id="EntityFramework" version="4.1.10331.0" />
-  <package id="jQuery" version="1.6.2" />
+  <package id="jQuery" version="1.7.2" />
   <package id="jQuery.Ajax.Unobtrusive" version="1.0" />
   <package id="jQuery.UI.Combined" version="1.8.11" />
   <package id="jQuery.Validation" version="1.8" />
@@ -13,4 +15,5 @@
   <package id="MicrosoftWebInfrastructure" version="1.0.0.0" />
   <package id="Modernizr" version="2.0.6" />
   <package id="System.Web.Providers" version="1.0.1" />
+  <package id="Twitter.Bootstrap" version="2.0.3" />
 </packages>
