--- a/Src/Howframework.Web/Howframework.Web/packages.config
+++ b/Src/Howframework.Web/Howframework.Web/packages.config
@@ -14,6 +14,7 @@
   <package id="Microsoft.Web.Optimization" version="0.1" />
   <package id="MicrosoftWebInfrastructure" version="1.0.0.0" />
   <package id="Modernizr" version="2.0.6" />
+  <package id="mongocsharpdriver" version="1.4.2" />
   <package id="System.Web.Providers" version="1.0.1" />
   <package id="Twitter.Bootstrap" version="2.0.3" />
 </packages>
