--- a/Src/Howframework.Domain/Howframework.Domain.csproj
+++ b/Src/Howframework.Domain/Howframework.Domain.csproj
@@ -38,6 +38,7 @@
       <HintPath>..\Howframework.Web\packages\mongocsharpdriver.1.4.2\lib\net35\MongoDB.Driver.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
