--- a/Src/Howframework.Web/Howframework.Web/Web.config
+++ b/Src/Howframework.Web/Howframework.Web/Web.config
@@ -15,6 +15,11 @@
     <!--<add key="MONGOLAB_URI" value="mongodb://localhost/?safe=true"/>-->
   </appSettings>
   <system.web>
+    <customErrors defaultRedirect="GenericError.htm"
+                  mode="Off">
+      <error statusCode="500"
+             redirect="InternalError.htm"/>
+    </customErrors>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="System.Web.Helpers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
