--- a/Src/Howframework.Web/Howframework.Web/Web.config
+++ b/Src/Howframework.Web/Howframework.Web/Web.config
@@ -12,7 +12,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <!--<add key="MONGOLAB_URI" value="mongodb://localhost/?safe=true"/>-->
+    <add key="LOCAL_MONGODB_URI" value="mongodb://localhost/?safe=true"/>
   </appSettings>
   <system.web>
     <!--<customErrors defaultRedirect="GenericError.htm"
